test/corpus/package.txt
===
package declaration
===

package foo

---

(source_file (package_clause (package_identifier)))

===
imports
===

import "foo"

import (
		"encoding/json"
		l "list"
)

---

(source_file 
 (import_declaration 
	(import_spec (simple_string_lit))) 
 (import_declaration 
	(import_spec_list 
	 (import_spec (simple_string_lit)) 
	 (import_spec (package_identifier) (simple_string_lit)))))
